<resources>
    <string name="app_name">CoupleLink</string>

    <string name="start_ad_unit_id">ca-app-pub-1535174860728352/1775977068</string>
    <string name="ads_app_id">ca-app-pub-1535174860728352~9208562767</string>

    <string name="view_email">이메일</string>
    <string name="view_pw">비밀번호</string>
    <string name="view_pwok">비밀번호 확인</string>
    <string name="view_name">이름 및 닉네임(8자이하)</string>
    <string name="view_signup">회원가입</string>
    <string name="view_emailsave">이메일저장</string>
    <string name="view_autologin">자동로그인</string>
    <string name="view_login">로그인</string>
    <string name="view_infofind">ID/PW찾기</string>
    <string name="view_invite">커플초대</string>
    <string name="view_apply">커플신청</string>
    <string name="view_applywait">커플 신청이 있습니다.</string>
    <string name="view_couplenm">커플명</string>

    <string name="consent">수락</string>
    <string name="cancel">취소</string>
    <string name="refuse">거절</string>

    <string name="edit_email_notinput">이메일을 입력해주세요.</string>
    <string name="edit_pw_notinput">비밀번호를 입력해주세요.</string>
    <string name="edit_email_name">이름을 입력해주세요.</string>
    <string name="edit_couplenm_notinput">커플명을 입력해주세요.(10자 이내)</string>

    <string name="error_email_already">이메일 주소가 이미 사용중인 주소입니다.</string>
    <string name="error_pw_notmatch">비밀번호가 일치하지 않습니다.</string>
    <string name="error_pw_short">비밀번호는 6자리 이상 설정해야합니다.</string>

    <string name="error_connect_couple">해당 회원은 이미 커플입니다.</string>
    <string name="error_connect_apply">해당 회원은 이미 커플신청을 받았습니다.\n확인하여 주시기 바랍니다.</string>
    <string name="error_connect_email">이메일이 존재하지 않습니다.\n확인하여 주시기 바랍니다.</string>
    <string name="error_connect_this">아쉽게도 본인과 연애는 구현되지 않았습니다.</string>
    <string name="error_connect_overlap">이미 커플신청을 하셨습니다.\n바람은 안되요!!</string>
    
    <string name="toast_signup_complete">회원가입 되었습니다.</string>
    <string name="toast_couple_connect">커플신청 되었습니다.</string>
    <string name="toast_couple_wait">상대방의 수락을 기다리는 중입니다.\n잠시만 기다려 주세요.</string>

    <string name="permission_sms">커플 SMS초대시 문자보내기 권한이 필요합니다.</string>
    <string name="permission_sms_setting">왜 거부하셨어요...\n권한이 없으면 카카오톡 초대밖에 사용하지 못한답니다.\n하지만 [설정] > [권한] 에서 권한을 허용할 수 있어요.</string>

    <string name="permission_phone">커플신청시 고유값을 위해 디바이스ID를 사용하고 있습니다.</string>
    <string name="permission_phone_setting">권한이 없으면 커플신청이 불가능 합니다.\n하지만 [설정] > [권한] 에서 권한을 허용할 수 있어요.</string>

    <string name="kakao_app_key">3591656e665defc7ca7606a6c1dade3a</string>
    <string name="kakao_client_secret">c0YCMP4o6ijXLXFCZesNG0D5lgWIfXVo</string>

    <string name="menu_category">카테고리</string>
    <string name="menu_setting">환경설정</string>
    <string name="menu_logout">로그아웃</string>



    <string name="sub_app_name">MyClips - All Clipboards</string>

    <string name="clip_monitor_service">MyClips Clipboard Monitor</string>

    <string name="create_new_clipboard">New clipboard</string>

    <string name="email_clipboard">Email clipboard</string>

    <string name="list_all_clipboards">List all clipboards</string>

    <string name="delete_clipboard">Delete clipboard</string>

    <string name="context_info">Info</string>

    <string name="context_delete_clip">Delete</string>

    <string name="context_email_clip">Email</string>

    <string name="clip_text_type">Text</string>

    <string name="clip_image_type">Image</string>

</resources>
